# hokee

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.html  README.md  TODO  build.bat  build.sh  cmake.bat  mingw.bat  msbuild.bat
.github/workflows/: build.yml  cmake_macos.yml  cmake_ubuntu_18_04.yml  cmake_ubuntu_20_04.yml  cmake_windows.yml
docs/: 404.html  all.html  assigned.html  backup.html  deleteBackup.js  edit0923.html  edit4d07.html  edit5222.html  edit93c0.html  editdc53.html  editf3b6.html  filterTable.js  help.html  index-2.html  index.html  issues.html  item011a.html  item0641.html  item084d.html  item0c98.html  item1398.html  item1434.html  item1a6a.html  item1a85.html  item1e35.html  item1e85.html  item23df.html  item2568.html  item2580.html  item2770.html  item2815.html  item2c6d.html  item2fc6.html  item3162.html  item3221.html  item3234.html  item3773.html  item37ab.html  item3ca5.html  item3ebc.html  (+288 more)
src/: Application.cpp  Application.h  CsvDatabase.cpp  CsvDatabase.h  CsvDate.cpp  CsvDate.h  CsvItem.cpp  CsvItem.h  CsvParser.cpp  CsvParser.h  CsvTable.h  CsvWriter.cpp  CsvWriter.h  CustomException.cpp  CustomException.h  Filesystem.h  HtmlGenerator.cpp  HtmlGenerator.h  HttpServer.cpp  HttpServer.h  InternalException.cpp  InternalException.h  ReportGenerator.cpp  ReportGenerator.h  Settings.cpp  Settings.h  UserException.cpp  UserException.h  Utils.cpp  Utils.h  add_rules_test.cpp  fix_rules_test.cpp  hokee.cmake.h  hokee.cpp  hokeeboo.cmake.h  hokeeboo.cpp  main.cpp  match_rules_test.cpp  selftest.cpp
src/csv/: CsvConfig.cpp  CsvConfig.h  CsvDatabase.cpp  CsvDatabase.h  CsvDate.cpp  CsvDate.h  CsvFormat.cpp  CsvFormat.h  CsvItem.cpp  CsvItem.h  CsvParser.cpp  CsvParser.h  CsvRules.cpp  CsvRules.h  CsvSettings.cpp  CsvSettings.h  CsvTable.cpp  CsvTable.h  CsvValue.cpp  CsvValue.h  CsvWriter.cpp  CsvWriter.h
src/html/: HtmlBody.h  HtmlBold.h  HtmlBreak.h  HtmlDivision.h  HtmlElement.cpp  HtmlElement.h  HtmlFooter.h  HtmlGenerator.cpp  HtmlGenerator.h  HtmlHead.h  HtmlHeader.h  HtmlHeading.h  HtmlHyperlink.h  HtmlImage.h  HtmlLink.h  HtmlMain.h  HtmlMeta.h  HtmlPage.cpp  HtmlPage.h  HtmlParagraph.h  HtmlStyle.h  HtmlTable.h  HtmlTableCell.h  HtmlTableHeader.h  HtmlTableRow.h  HtmlText.cpp  HtmlText.h  HtmlTitle.h  IHtmlPrintable.cpp  IHtmlPrintable.h  IPrintable.cpp  IPrintable.h  deleteRule.js  filterSummary.js  reload.js  restoreBackup.js  saveRules.js  stylesheet.css  submitFile.js  submitMail.js  (+2 more)
test_data/add_rules_test/: rules.csv
test_data/fix_rules_test/: rules.csv
test_data/match_rules_test/: rules.csv
test_data/match_rules_test/ABC/: Account_123456790_2020.csv
testdata/input/csv/ABC/: Account_123456790_2020.csv
testdata/match_rules_test/input/ABC/: Account_123456790_2020.csv
tests/: format_test.cpp  hokee-test.cpp  html_test.cpp  rules_add_test.cpp  rules_match_test.cpp
tests/test_data/: index.html  input_add_test.csv  rules.csv  rules_add_test.csv
tests/test_data/ABC/: Account_123456790_2020.csv  Account_123456790_2020_1.csv  Account_123456790_2020_2.csv  format.ini
tests/test_data/DEF/: Account_123456790_2020.csv  format.ini
